<resources>
    <string name="app_name">Traskilada</string>

    <string name="txt_view_services">Services</string>
    <string name="txt_view_photos">Photos (optional)</string>
    <string name="txt_view_payment">Payment</string>
    <string name="txt_view_date">Date</string>
    <string name="txt_view_time">Time</string>

    <string name="symbol_money">$</string>
    <string name="symbol_money_local" translatable="false">[$,.]</string>

    <string name="action_button_accept" translatable="false">ok</string>

    <string name="tmp_text_checkbox_item">Line Item Selected</string>
    <string name="tmp_text_date" translatable="false">2017/05/06</string>
    <string name="tmp_text_time" translatable="false">12:00 pm</string>
    <string name="txt_view_select_ap">Select appointment</string>
    <string name="txt_view_barber_stylist">Barber / Stylist</string>
    <string name="action_btn_pay_now">Pay now</string>
    <string name="action_btn_pay_later">Pay later</string>
    <string name="edit_text_first_name">First name</string>
    <string name="edit_text_last_name">Last name</string>
    <string name="edit_text_phone_number">Phone number</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
