<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/logo"
        android:layout_marginTop="@dimen/top_edge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/text_appearance_extra_large" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/left_and_right_edge"
        android:paddingStart="@dimen/left_and_right_edge"
        android:paddingEnd="@dimen/left_and_right_edge"
        android:hint="@string/edit_text_first_name" />

    <EditText
        android:id="@+id/Lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/left_and_right_edge"
        android:paddingStart="@dimen/left_and_right_edge"
        android:paddingEnd="@dimen/left_and_right_edge"
        android:inputType="textPersonName"
        android:hint="@string/edit_text_last_name" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/left_and_right_edge"
        android:paddingStart="@dimen/left_and_right_edge"
        android:paddingEnd="@dimen/left_and_right_edge"
        android:inputType="phone"
        android:hint="@string/edit_text_phone_number" />

    <Button
        android:id="@+id/action_btn_sign_in"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_appearance_extra_large"/>

    <Button
        android:layout_marginLeft="@dimen/left_and_right_edge"
        android:layout_marginStart="@dimen/left_and_right_edge"
        android:layout_marginRight="@dimen/left_and_right_edge"
        android:layout_marginEnd="@dimen/left_and_right_edge"
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/cardview_light_background"
        android:text="FB" />

    <Button
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_edge"
        android:layout_marginLeft="@dimen/left_and_right_edge"
        android:layout_marginStart="@dimen/left_and_right_edge"
        android:layout_marginRight="@dimen/left_and_right_edge"
        android:layout_marginEnd="@dimen/left_and_right_edge"
        android:background="@color/colorAccent"
        android:textColor="@color/cardview_light_background"
        android:elevation="0dp"
        android:text="G+" />

</LinearLayout>