<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/left_and_right_edge"
                android:paddingRight="@dimen/left_and_right_edge"
                android:paddingStart="@dimen/left_and_right_edge"
                android:paddingTop="@dimen/top_edge"
                android:text="@string/txt_view_select_ap"
                android:textSize="@dimen/text_appearance_extra_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_edge"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/left_and_right_edge"
                    android:paddingLeft="@dimen/left_and_right_edge"
                    android:paddingStart="@dimen/left_and_right_edge">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_view_date"
                        android:textSize="@dimen/text_appearance_medium" />

                    <EditText
                        android:id="@+id/appointment_input_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tmp_text_date" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_view_time"
                        android:textSize="@dimen/text_appearance_medium" />

                    <EditText
                        android:id="@+id/appointment_input_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:text="@string/tmp_text_time" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_edge"
                android:gravity="center"
                android:text="@string/txt_view_barber_stylist"
                android:textSize="@dimen/text_appearance_extra_large" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/top_edge"
                android:columnCount="3"
                android:rowCount="2">

                <ImageButton
                    android:id="@+id/img_barber_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_child_edge"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/img_barber_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_child_edge"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/img_barber_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_child_edge"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/img_barber_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_child_edge"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/img_barber_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_child_edge"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/img_barber_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_child_edge"
                    app:srcCompat="@mipmap/ic_launcher" />
            </GridLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/top_edge"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pay_later"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/left_and_right_edge"
                    android:text="@string/action_btn_pay_later" />

                <Button
                    android:id="@+id/btn_pay_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/left_and_right_edge"
                    android:text="@string/action_btn_pay_now" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>